--- a/addons/hr_attendance/views/hr_employee_view.xml
+++ b/addons/hr_attendance/views/hr_employee_view.xml
@@ -52,6 +52,9 @@
             <xpath expr="//button[@name='generate_random_barcode']" position="after">
                 <button name="open_barcode_scanner" string="Read a badge" type="object" class="btn btn-link" invisible="barcode"/>
             </xpath>
+            <field name="resource_calendar_id" position="after">
+                <field name="ruleset_id" string="Overtime Ruleset"/>
+            </field>
         </field>
     </record>
 
