[IMP] web: visually indicate invalid fields in notebook tabs
This commit improves the user experience in notebook views by
highlighting tabs as invalid when they contain invalid fields. This
ensures that users are no longer confused when a form cannot be saved
due to a field error hidden within an inactive tab — the tab now
visually indicates where the problem lies.

task-4991643

closes odoo/odoo#222227

Signed-off-by: Aaron Bohy (aab) <aab@odoo.com>

--- a/addons/web/static/src/core/notebook/notebook.scss
+++ b/addons/web/static/src/core/notebook/notebook.scss
@@ -56,6 +56,11 @@
         &:hover {
             border-color: var(--Notebook__link-border-color--hover);
         }
+
+        &.o_page_invalid {
+            color: o-text-color('danger') !important;
+            background-color: #{$o-input-invalid-bg} !important;
+        }
     }
 
     .tab-pane:not(.show) {
