[IMP] calendar: redesign quick create
Simplify the quick create from the calendar view:
- Use icons instead of labels on the fields
- Use the new videocall url widget
- Add an html field without the move plugin so that the handles do not
  overlap the icons
- Remove some unused invisible fields
- Remove the custom buttons

task-4909129

Part-of: odoo/odoo#222741
Related: odoo/enterprise#92263
Related: odoo/upgrade#8262
Signed-off-by: Thibault Delavallee (tde) <tde@openerp.com>

--- a/addons/calendar/static/src/scss/calendar_event_views.scss
+++ b/addons/calendar/static/src/scss/calendar_event_views.scss
@@ -10,3 +10,25 @@
         }
     }
 }
+
+/*                 Quick-Edit Form View
+ **********************************************************/
+
+.modal-dialog:has(.o_calendar_event_form_quick_create) {
+    --modal-width: 450px;
+}
+
+.o_calendar_event_form_quick_create {
+    .o_form_nosheet {
+        padding: 0;
+        > div {
+            margin-top: 0.5rem;
+            margin-left: 5px;
+            margin-right: 5px;
+        }
+    }
+    i.fa {
+        text-align: center;
+        min-width: 2rem;
+    }
+}
