--- a/addons/calendar/views/calendar_views.xml
+++ b/addons/calendar/views/calendar_views.xml
@@ -332,48 +332,73 @@
         <field name="model">calendar.event</field>
         <field name="priority" eval="2"/>
         <field name="arch" type="xml">
-            <form string="Meetings" js_class="calendar_quick_create_form_view">
-                <sheet>
+            <form string="Meetings" class="o_calendar_event_form_quick_create" js_class="calendar_quick_create_form_view">
+                <field name="invalid_email_partner_ids" invisible="1"/> <!--used in many2many_attendees widget-->
+                <div class="d-flex align-items-center" colspan="2">
+                    <i class="fa fa-tag text-600" title="Booking Name"/>
+                    <field name="name" nolabel="1"
+                        placeholder="Add Title"
+                        class="w-100 mb-0"
+                    />
+                </div>
+                <div class="d-flex align-items-center" colspan="2">
+                    <i class="fa fa-clock-o text-600" title="Dates"/>
+                    <field name="start" nolabel="1"
+                        widget="daterange" options="{'end_date_field': 'stop'}"
+                        placeholder="Dates" class="w-100 mb-0"
+                        invisible="allday"
+                    />
+                    <field name="start_date" nolabel="1"
+                        widget="daterange" options="{'end_date_field': 'stop_date'}"
+                        placeholder="Dates" class="w-100 mb-0"
+                        invisible="not allday"
+                    />
+                    <span class="ms-1 w-25">
+                        <field name="allday" class="mb-0" title="All Day" nolabel="1"/>
+                        <span>All day</span>
+                    </span>
+                    <field name="stop" invisible="1"/>
+                </div>
+                <div class="d-flex" colspan="2">
+                    <i class="fa fa-user mt-1 text-600" title="Participants"/>
+                    <field name="partner_ids" nolabel="1"
+                        widget="many2many_tags"
+                        placeholder="Participants"
+                        class="w-75 mb-0"
+                    />
+                </div>
+                <div class="d-flex align-items-center" colspan="2">
+                    <i class="fa fa-map text-600" title="Location"/>
+                    <field name="location" nolabel="1"
+                        placeholder="Location"
+                        class="w-100 mb-0"
+                    />
+                    <!--fields set via the fake front-end only actions must be force saved (see calendar_form)-->
                     <field name="recurrence_update" invisible="1"/>
-                    <field name="videocall_source" invisible="1"/>
-                    <field name="access_token" invisible="1" force_save="1"/>
-                    <field name="access_token" invisible="1"/>
-                    <field name="invalid_email_partner_ids" invisible="1"/> <!-- this field will be used in
-                        many2many_attendees widget -->
-                    <div class="o_row">
-                        <h1 class="w-100"><field name="name" nolabel="1" placeholder="Add title" colspan="2"/></h1>
-                    </div>
-                    <group>
-                        <field name="start_date" widget="daterange" options="{'end_date_field': 'stop_date'}" invisible="not allday" required="allday"/>
-                        <field name="start" widget="daterange" options="{'end_date_field': 'stop'}" invisible="allday" required="not allday"/>
-                        <field name="stop_date" invisible="1" />
-                        <field name="stop" invisible="1" />
-                        <field name="unavailable_partner_ids" invisible="1" /> <!-- this field will be used in many2many_attendees widget -->
-                        <field name="allday"/>
-                        <field name="partner_ids" widget="many2manyattendee"
-                            placeholder="Add attendees..."
-                            options="{'no_quick_create': True}"
-                            context="{'form_view_ref': 'base.view_partner_simple_form'}"
-                        />
-                        <field name="location"/>
-                        <label for="videocall_location" class="opacity-100"/>
-                        <div col="2">
-                            <field name="videocall_location" string="Meeting Link" widget="CopyClipboardChar" force_save="1" readonly="videocall_source == 'discuss'"/>
-                            <button name="clear_videocall_location" type="object" class="btn btn-link p-0"
-                                invisible="not videocall_location" context="{'recurrence_update': recurrence_update}">
-                                <span class="fa fa-times"></span><span> Clear meeting</span>
-                            </button>
-                            <button name="set_discuss_videocall_location" type="object" class="btn btn-link p-0"
-                                invisible="videocall_location" context="{'recurrence_update': recurrence_update}">
-                                <span class="fa fa-plus"></span> <span>Odoo meeting</span>
-                            </button>
-                            <button name="action_join_video_call" class="btn btn-link" help="Join Video Call" type="object" invisible="not videocall_location">
-                                <span class="oi oi-arrow-right"></span><span> Join video call</span>
-                            </button>
-                        </div>
-                        <field name="description" placeholder="Describe your meeting"/>
-                    </group>
-                </sheet>
+                    <field name="access_token" force_save="1" invisible="1"/>
+                    <field name="videocall_location" force_save="1" invisible="1"/>
+                    <field name="videocall_source" force_save="1" invisible="1"/>
+                    <button name="set_discuss_videocall_location" type="object" class="mx-1 btn-link text-nowrap"
+                        invisible="videocall_location" context="{'recurrence_update': recurrence_update}">
+                        <span class="fa fa-plus me-1"/>Video
+                    </button>
+                </div>
+                <div class="d-flex align-items-center" colspan="2" invisible="not videocall_location">
+                    <i class="fa fa-video-camera text-600" title="Videocall URL"/>
+                    <field name="videocall_location" nolabel="1"
+                        widget="CopyClipboardChar"
+                        class="w-100 mb-0 o_field_CopyClipboardChar" 
+                    />
+                    <button name="clear_videocall_location" class="btn btn-sm px-0"><i class="fa fa-remove" title="Remove"/></button>
+                </div>
+                <div class="d-flex align-items-center" colspan="2">
+                    <i class="fa fa-lock text-600" title="Visibility"/>
+                    <field name="privacy" nolabel="1" class="w-100 mb-0" placeholder="Visibility"/>
+                </div>
+                <div class="d-flex" colspan="2">
+                    <i class="fa fa-sticky-note mt-2 text-600" title="Notes"/> 
+                    <field name="notes" nolabel="1" class="w-100" placeholder="Notes" widget="calendar_event_notes_html"/>
+                </div>
             </form>
         </field>
     </record>
