--- a/addons/im_livechat/views/discuss_channel_views.xml
+++ b/addons/im_livechat/views/discuss_channel_views.xml
@@ -55,13 +55,13 @@
             <field name="arch" type="xml">
                 <list js_class="im_livechat.discuss_channel_list" sample="1" string="History" create="false" default_order="create_date desc, id desc">
                     <field name="create_date" string="Date"/>
-                    <field name="livechat_agent_history_ids" string="Agents" widget="many2many_tags_avatar" optional="show"/>
-                    <field name="livechat_agent_requesting_help_history" widget="many2one_avatar"/>
-                    <field name="livechat_agent_providing_help_history" widget="many2one_avatar"/>
-                    <field name="livechat_bot_history_ids" string="Bot" widget="many2many_tags_avatar" optional="show"/>
                     <field name="livechat_customer_history_ids" string="Customer" widget="many2many_tags_avatar" optional="show"/>
+                    <field name="livechat_agent_history_ids" string="Agents" widget="many2many_tags_avatar" optional="show"/>
+                    <field name="livechat_agent_requesting_help_history" widget="many2one_avatar" optional="hide"/>
+                    <field name="livechat_agent_providing_help_history" widget="many2one_avatar" optional="hide"/>
+                    <field name="livechat_bot_history_ids" string="Chatbot" widget="many2many_tags_avatar" optional="hide"/>
                     <field name="country_id" optional="show"/>
-                    <field name="livechat_lang_id"/>
+                    <field name="livechat_lang_id" optional="show"/>
                     <field name="livechat_expertise_ids" string="Expertise" widget="many2many_tags" optional="show"/>
                     <field name="livechat_conversation_tag_ids" string="Tags" widget="many2many_tags" options="{'color_field': 'color'}" optional="hide"/>
                     <field name="livechat_channel_id" optional="hide"/>
