--- a/addons/im_livechat/views/im_livechat_channel_member_history_views.xml
+++ b/addons/im_livechat/views/im_livechat_channel_member_history_views.xml
@@ -109,11 +109,12 @@
             <field name="arch" type="xml">
                 <pivot js_class="im_livechat.agent_history_pivot" string="Livechat Support Statistics" sample="1" display_quantity="1">
                     <field name="has_call" invisible="1"/>
+                    <field name="session_start_hour" invisible="1"/>
                     <field name="session_week_day" invisible="1"/>
                     <field name="partner_id" type="row"/>
                     <field name="call_duration_hour" type="measure" widget="float_time" options="{'displaySeconds': True}"/>
                     <field name="call_percentage" type="measure" widget="percentage"/>
-                    <field name="response_time_hour" string="Response Time (hh:mm:ss)" type="measure" widget="float_time" options="{'displaySeconds': True}" />
+                    <field name="response_time_hour" string="Response Time" type="measure" widget="float_time" options="{'displaySeconds': True}" />
                     <field name="session_duration_hour" type="measure" widget="float_time" options="{'displaySeconds': True}"/>
                     <field name="rating" string="Rating (%)" type="measure" widget="im_livechat.rating_percentage"/>
                     <field name="call_count" type="measure" widget="integer"/>
