--- a/addons/im_livechat/views/im_livechat_channel_views.xml
+++ b/addons/im_livechat/views/im_livechat_channel_views.xml
@@ -3,7 +3,7 @@
     <data>
 
         <record id="im_livechat_channel_action" model="ir.actions.act_window">
-            <field name="name">Website Live Chat Channels</field>
+            <field name="name">Live Chat Channels</field>
             <field name="path">livechat</field>
             <field name="res_model">im_livechat.channel</field>
             <field name="view_mode">kanban,form</field>
@@ -33,10 +33,7 @@
                             </a>
                         </t>
                         <t t-name="card" class="p-0 row g-0">
-                            <aside t-if="record.image_128.raw_value" class="ps-4 col-3" t-att-class="{'o-livechat-ChannelKanban-highlighted': record.available_operator_ids.raw_value.length > 0}">
-                                <field  name="image_128" widget="image" options="{'img_class': 'object-fit-contain'}" alt="Channel"/>
-                            </aside>
-                            <main class="pe-4 py-2 ps-2 col" t-att-class="{'o-livechat-ChannelKanban-highlighted': record.available_operator_ids.raw_value.length > 0, 'ps-4': !record.image_128.raw_value}">
+                            <main class="pe-4 py-2 ps-4 col" t-att-class="{'o-livechat-ChannelKanban-highlighted': record.available_operator_ids.raw_value.length > 0}">
                                 <div class="d-flex justify-content-between">
                                     <div>
                                         <field name="name" class="fs-4" style="word-wrap: break-word;"/>
@@ -78,13 +75,18 @@
                                 <field string="Chatbots" name="chatbot_script_count" widget="statinfo"/>
                             </button>
                             <button class="oe_stat_button" type="action" invisible="nbr_channel == 0" name="%(discuss_channel_action_from_livechat_channel)d" icon="fa-comments">
-                                <field string="Sessions" name="nbr_channel" widget="statinfo"/>
-                            </button>
-                            <button name="action_view_rating" invisible="rating_count == 0" class="oe_stat_button" type="object" icon="fa-smile-o">
-                                <field string="% Happy" name="rating_percentage_satisfaction" widget="statinfo"/>
+                                <div>
+                                    <div class="o_stat_info flex-row-reverse align-items-baseline gap-1 me-1">
+                                        <span class="o_stat_value"><field name="nbr_channel"/></span>
+                                        <span class="o_stat_text">Sessions</span>
+                                    </div>
+                                    <div class="o_stat_info flex-row-reverse align-items-baseline gap-1 me-1">
+                                        <span class="o_stat_value"><field name="rating_percentage_satisfaction"/>%</span>
+                                        <span class="o_stat_text">Happy</span>
+                                    </div>
+                                </div>
                             </button>
                         </div>
-                        <field name="image_128" widget="image" class="oe_avatar"/>
                         <div class="oe_title">
                             <label for="name"/>
                             <h1>
@@ -92,7 +94,7 @@
                             </h1>
                         </div>
                         <notebook>
-                            <page string="Operators" name="operators">
+                            <page string="Agents" name="Agents">
                                     <field name="user_ids"
                                            nolabel="1"
                                            colspan="2"
@@ -135,7 +137,7 @@
                                     <group>
                                         <group class="order-1 order-lg-0">
                                             <p class="text-muted" colspan="2">
-                                                Operators that do not show any activity In Odoo for more than 30 minutes will be considered as disconnected.
+                                                Agents who are inactive in Odoo for more than 30 minutes will be considered disconnected.
                                             </p>
                                         </group>
                                         <group class="oe_subtotal_footer d-flex justify-content-end">
@@ -154,19 +156,18 @@
                             </page>
                             <page string="Options" name="options" groups="im_livechat.im_livechat_group_manager">
                                 <group>
-                                    <group string="Livechat Button">
-                                        <field name="button_text" string="Notification text" help="Text to display on the notification"/>
-                                        <label for="button_background_color" string="Livechat Button Color" />
+                                    <group string="Live Chat Button">
+                                        <field name="button_text" string="Notification Text" placeholder="e.g. Need help? Chat with us."/>
+                                        <label for="button_background_color" string="Button Colors" />
                                         <div class="o_livechat_layout_colors d-flex align-items-center align-middle">
                                             <field name="button_background_color" widget="color" class="mb-4 w-auto o_im_livechat_field_widget_color"/>
                                             <field name="button_text_color" widget="color" class="mb-4 w-auto o_im_livechat_field_widget_color"/>
                                             <widget name="colors_reset_button" options="{'default_colors': {'button_background_color': '#878787', 'button_text_color': '#FFFFFF'}}" />
                                         </div>
                                     </group>
-                                    <group string="Livechat Window">
+                                    <group string="Live Chat Window">
                                         <field name="default_message" placeholder="e.g. Hello, how may I help you?"/>
-                                        <field name="input_placeholder"/>
-                                        <label for="header_background_color" string="Channel Header Color" />
+                                        <label for="header_background_color" string="Window Colors" />
                                         <div class="o_livechat_layout_colors d-flex align-items-center align-middle">
                                             <field name="header_background_color" widget="color" class="mb-4 w-auto o_im_livechat_field_widget_color"/>
                                             <field name="title_color" widget="color" class="mb-4 w-auto o_im_livechat_field_widget_color"/>
@@ -183,9 +184,13 @@
                                     </group>
                                 </group>
                             </page>
-                            <page string="Channel Rules" name="channel_rules" groups="im_livechat.im_livechat_group_manager">
+                            <page string="Rules" name="channel_rules" groups="im_livechat.im_livechat_group_manager">
                                 <field name="rule_ids" colspan="2"/>
-                                <div class="text-muted" colspan="2">Define rules for your live support channel. You can apply an action for the given URL, and per country.<br />To identify the country, GeoIP must be installed on your server, otherwise, the countries of the rule will not be taken into account.</div>
+                                <div class="text-muted" colspan="2">
+                                    To apply the rule only to certain pages of your website, enter a URL regex like /shop. This will match any page that starts with /shop, such as /shop/product. Leave the field empty to apply the rule to all pages.<br/>
+                                    For on-premise databases, GeoIP must be installed on your server to geolocate visitors. Without it, rules that include country restrictions will be ignored.
+                                    <widget name="documentation_link" path="/administration/on_premise/geo_ip.html" icon="fa-fw fa-info-circle"/>
+                                </div>
                             </page>
                             <page string="Widget" name="configuration_widget" groups="im_livechat.im_livechat_group_manager">
                                 <div class="alert alert-warning mt4 mb16" role="alert" invisible="web_page">
@@ -236,9 +241,9 @@
             <field name="arch" type="xml">
                 <list string="Rules">
                     <field name="sequence" widget="handle"/>
-                    <field name="regex_url"/>
                     <field name="action"/>
                     <field name="chatbot_script_id"/>
+                    <field name="regex_url"/>
                     <field name="country_ids" widget="many2many_tags"/>
                 </list>
             </field>
@@ -268,6 +273,10 @@
                     <sheet>
                         <group>
                             <field name="action" widget="radio"/>
+                            <label for="auto_popup_timer" class="oe_inline" invisible="action != 'auto_popup'"/>
+                            <div class="oe_inline" invisible="action != 'auto_popup'">
+                                <field name="auto_popup_timer" class="oe_inline"/> seconds
+                            </div>
                             <label for="chatbot_script_id" string="Chatbot" invisible="action == 'hide_button'"/>
                             <div name="Chatbot" invisible="action == 'hide_button'">
                                 <field name="chatbot_script_id" class="oe_inline" style="width: 60% !important;"
@@ -275,11 +284,7 @@
                             </div>
                             <field name="chatbot_enabled_condition" invisible="not chatbot_script_id" widget="radio"/>
                             <field name="regex_url" placeholder="e.g. /contactus"/>
-                            <label for="auto_popup_timer" class="oe_inline" invisible="action != 'auto_popup'"/>
-                            <div class="oe_inline" invisible="action != 'auto_popup'">
-                                <field name="auto_popup_timer" class="oe_inline"/> seconds
-                            </div>
-                            <field name="country_ids" widget="many2many_tags" options="{'no_open': True, 'no_create': True}"/>
+                            <field name="country_ids" placeholder="All countries" widget="many2many_tags" options="{'no_open': True, 'no_create': True}"/>
                         </group>
                     </sheet>
                 </form>
