--- a/addons/website_sale/views/templates.xml
+++ b/addons/website_sale/views/templates.xml
@@ -351,7 +351,7 @@
 
     <template id="product_variant_preview">
         <div
-            t-attf-class="o_wsale_attribute_previewer d-flex align-items-center gap-1 flex-nowrap z-1 overflow-hidden {{
+            t-attf-class="o_wsale_attribute_previewer d-flex align-items-center gap-1 flex-nowrap overflow-hidden {{
                 'show_on_hover' if product_ptavs[0]['ptav'].attribute_id.preview_variants == 'hover' and layout_mode != 'list' else ''
             }}"
             t-att-data-hidden-ptav-count="product_ptavs_data.get('hidden_ptavs_count')"
@@ -365,7 +365,7 @@
                     t-value="product_href.split('#')[0] + '#attribute_values=%s' % (selected_attribute_value)"
                 />
                 <a
-                    class="o_product_variant_preview d-none"
+                    class="o_product_variant_preview d-none z-2"
                     t-att-data-variant-image="previewed_ptav['variant_image_url']"
                     t-att-href="variant_href"
                 >
@@ -415,12 +415,13 @@
                     </div>
                     <span
                         t-else=""
-                        t-attf-class="{{'' if ppr == 2 and layout_mode != 'list' else 'btn-sm'}} btn bg-body w-100 text-body text-truncate"
-                        t-out="ptav.name"
-                    />
+                        t-attf-class="{{'' if ppr == 2 and layout_mode != 'list' else 'btn-sm'}} o_wsale_product_ptav_pill btn w-100 bg-body text-body"
+                    >
+                        <span class="o_wsale_product_ptav_pill_label d-block text-truncate" t-out="ptav.name"/>
+                    </span>
                 </a>
             </t>
-            <span name="hidden_ptavs_count" class="d-none ms-1 small">
+            <span name="hidden_ptavs_count" class="d-none ms-1 small z-2">
                 <a t-att-href="product_href"/>
             </span>
         </div>
