--- a/addons/sms_twilio/views/sms_sms_views.xml
+++ b/addons/sms_twilio/views/sms_sms_views.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <record id="sms_sms_view_form_inherit" model="ir.ui.view">
-            <field name="name">sms.sms.view.form/inherit</field>
+        <record id="sms_sms_view_form" model="ir.ui.view">
+            <field name="name">sms.sms.view.form.inherit.twilio</field>
             <field name="model">sms.sms</field>
             <field name="inherit_id" ref="sms.sms_tsms_view_form"/>
             <field name="arch" type="xml">
