--- a/addons/account/views/account_move_views.xml
+++ b/addons/account/views/account_move_views.xml
@@ -1207,9 +1207,9 @@
                                         <field name="company_id" column_invisible="True"/>
                                         <field name="company_currency_id" column_invisible="True"/>
                                         <field name="display_type" force_save="1" column_invisible="True"/>
-                                        <field name="collapse_prices" column_invisible="True"/>
-                                        <field name="collapse_composition" column_invisible="True"/>
-                                        <field name="parent_id" column_invisible="True"/>
+                                        <field name="collapse_prices" column_invisible="True" force_save="1"/>
+                                        <field name="collapse_composition" column_invisible="True" force_save="1"/>
+                                        <field name="parent_id" column_invisible="True" force_save="1"/>
                                     </list>
                                     <kanban class="o_kanban_mobile">
                                         <!-- Displayed fields -->
