--- a/addons/hr_work_entry/views/hr_contract_template_views.xml
+++ b/addons/hr_work_entry/views/hr_contract_template_views.xml
@@ -5,9 +5,9 @@
         <field name="model">hr.version</field>
         <field name="inherit_id" ref="hr.hr_contract_template_form_view"/>
         <field name="arch" type="xml">
-            <div name="wage" position="after">
+            <separator name="schedule" position="after">
                 <field name="work_entry_source" invisible="1"/>
-            </div>
+            </separator>
         </field>
     </record>
 </odoo>
