--- a/addons/hr_work_entry/views/hr_employee_views.xml
+++ b/addons/hr_work_entry/views/hr_employee_views.xml
@@ -17,7 +17,7 @@
                         </div>
                 </button>
             </button>
-            <separator name="schedule" position="before">
+            <separator name="schedule" position="after">
                 <field name="work_entry_source" invisible="1"/>
             </separator>
         </field>
